kustomize/infrastructure/base/tekton-operator/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: kong
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
    namespace: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /tekton/dashboard
    backendRefs:
    - name: tekton-dashboard
      namespace: tekton-pipelines
      port: 9097
  - matches:
    - path:
        type: PathPrefix
        value: /tekton
    backendRefs:
    - name: tekton-dashboard
      namespace: tekton-pipelines
      port: 9097
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: kong
  to:
  - group: ""
    kind: Service
